--- a/style.css
+++ b/style.css
@@ -65,3 +65,6 @@ height: 95%;
     border-image: linear-gradient(rgb(255, 94, 0),rgb(217, 255, 0));
     border-image-slice: 1;
 }
+footer p{
+    text-align: center;
+}
